--- a/app/src/main/res/layout/eleve_cellule.xml
+++ b/app/src/main/res/layout/eleve_cellule.xml
@@ -17,12 +17,22 @@
 
     <TextView
         android:id="@+id/ec_tv_nom"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:gravity="center_vertical"
         android:paddingLeft="@dimen/margin_15"
         android:text="TextView"
         android:textColor="@color/black"
         android:textSize="@dimen/font_16"/>
+
+    <ImageView
+        android:id="@+id/ec_iv_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/margin_20"
+        android:layout_gravity="center_vertical"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/arrow_right"/>
 
 </LinearLayout>
