--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -22,14 +22,19 @@
     <dimen name="font_50">75sp</dimen>
 
     <!-- Margin *2 -->
+    <dimen name="margin_2">2dp</dimen>
     <dimen name="margin_5">10dp</dimen>
     <dimen name="margin_10">20dp</dimen>
+    <dimen name="margin_13">26dp</dimen>
     <dimen name="margin_15">30dp</dimen>
+    <dimen name="margin_17">34dp</dimen>
     <dimen name="margin_20">40dp</dimen>
     <dimen name="margin_30">60dp</dimen>
     <dimen name="margin_25">50dp</dimen>
     <dimen name="margin_50">100dp</dimen>
     <dimen name="margin_80">160dp</dimen>
+
+    <dimen name="standard_height">60dp</dimen>
 
 
 </resources>
