--- a/app/src/main/res/layout/eleve_cellule.xml
+++ b/app/src/main/res/layout/eleve_cellule.xml
@@ -1,39 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="@dimen/menu_height"
-              android:orientation="horizontal"
-              android:padding="@dimen/margin_15"
-              android:background="@color/white">
+<com.gc.materialdesign.views.LayoutRipple
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:clickable="true"
+    materialdesign:rippleSpeed="50">
 
-
-    <TextView
-        android:id="@+id/ec_tv_prenom"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:text="TextView"
-        android:textColor="@color/black"
-        android:textSize="@dimen/font_16"/>
+        android:orientation="horizontal"
+        android:padding="@dimen/margin_15">
 
-    <TextView
-        android:id="@+id/ec_tv_nom"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:paddingLeft="@dimen/margin_15"
-        android:text="TextView"
-        android:textColor="@color/black"
-        android:textSize="@dimen/font_16"/>
 
-    <ImageView
-        android:id="@+id/ec_iv_arrow"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/margin_20"
-        android:layout_gravity="center_vertical"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:src="@drawable/arrow_right"/>
+        <TextView
+            android:id="@+id/ec_tv_prenom"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="@dimen/font_16"/>
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/ec_tv_nom"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/margin_15"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="@dimen/font_16"/>
+
+        <ImageView
+            android:id="@+id/ec_iv_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/margin_20"
+            android:layout_gravity="center_vertical"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/arrow_right"/>
+    </LinearLayout>
+
+</com.gc.materialdesign.views.LayoutRipple>
